# firmware-debug-openenv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
firmware_debug_env/: Dockerfile  __init__.py  models.py  openenv.yaml  pyproject.toml
firmware_debug_env/server/: app.py  firmware_environment.py  tasks.py
server/: app.py
